Add youtube notification commands